--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,80 @@
-/* You can add global styles to this file, and also import other style files */
+@import "bootstrap/scss/bootstrap-grid";
+@import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap");
+
+* {
+  font-family: "Libre Franklin", sans-serif;
+  // outline: 1px solid red; 
+}
+
+html {
+  font-size: 16px;
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+}
+
+.title {
+  font-size: 1.6rem;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.title-large {
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.subtitle {
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.caption {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 300;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.section-gradient {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  background: linear-gradient(360deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 100%);
+}
+
+@media (max-width: 1199.98px) {
+  html {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 991.98px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  html {
+    font-size: 13px;
+  }
+}
