--- a/src/app/portfolio-preview/portfolio-preview.component.html
+++ b/src/app/portfolio-preview/portfolio-preview.component.html
@@ -1,1 +1,17 @@
-<p>portfolio-preview works!</p>
+<div class="container-fluid">
+  <div class="container">
+    <div class="p-5 d-flex flex-column align-items-center">
+      <div class="title">PROJEKTUJEMY MARZENIA, NIE TYLKO WNĘTRZA</div>
+      <div class="pt-3 caption">
+        Stworzymy dla Ciebie wnętrza, które odzwierciedlą Twój styl, łącząc
+        estetykę z funkcjonalnością w spójną i zachwycającą całość
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-12 col-md-3 img-1"></div>
+        <div class="col-12 col-md-3 img-1"></div>
+        <div class="col-12 col-md-3 img-1"></div>
+      </div>
+      <button>Zobacz więcej...</button>
+    </div>
+  </div>
+</div>
