--- a/src/app/portfolio-preview/portfolio-preview.component.html
+++ b/src/app/portfolio-preview/portfolio-preview.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="p-5 d-flex flex-column align-items-center">
       <div class="title">PROJEKTUJEMY MARZENIA, NIE TYLKO WNĘTRZA</div>
-      <div class="pt-3 caption">
+      <div class="pt-3 text-center caption">
         Stworzymy dla Ciebie wnętrza, które odzwierciedlą Twój styl, łącząc
         estetykę z funkcjonalnością w spójną i zachwycającą całość
       </div>
