--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,7 +1,16 @@
-.img-1 {
-  width: 300px;
+.portrait {
+  width: 80%;
+  object-fit: contain;
+}
+
+.line {
+  border-top: white 0.5px solid;
+  width: 80%;
+}
+
+.image {
+  width: 200px;
   height: 300px;
-  margin: 20px;
   background-color: pink;
 }
 
