--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -1,1 +1,11 @@
-<p>offer works!</p>
+<div class="container-fluid">
+    <div class="container">
+        <div class="p-5 d-flex flex-column justify-content-center align-items-center">
+            <div class="title">Oferta</div>
+            <div class="pt-3 pb-4 text-center caption">
+                Każdy z nas ma unikalne potrzeby i własne wizje wymarzonego wnętrza. Jedno mieszkanie można urządzić na wiele sposobów, łącząc różne style i funkcje. Dlatego oferuję różnorodne opcje projektów wnętrz, które pozwolą dostosować moją ofertę do Twoich indywidualnych oczekiwań. Bez względu na to, jakiego efektu szukasz - minimalistycznego, nowoczesnego czy klasycznego - znajdziemy rozwiązanie, które najlepiej odpowiada Twoim potrzebom i marzeniom.
+            </div>
+            <button>Poznaj ofertę...</button>
+        </div>
+    </div>
+</div>
