--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,10 +1,7 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
     <div class="row g-0 pt-5 px-5 px-lg-0 d-flex justify-content-center">
-      <div class="col-lg-5 col-7 d-flex justify-content-center">
-        <div class="image"></div>
-      </div>
-      <div class="col-lg-5 col-md-12 pb-5 pt-md-0 pe-0 pe-sm-5">
+      <div class="col-lg-5 col-md-12 pb-5 pt-md-0 pe-0 pe-sm-5 text-container">
         <div class="title pb-3">O mnie</div>
         <div class="subtitle pb-3">mgr inż. arch. Simona Lorenc</div>
         <div class="pb-3 caption">
@@ -16,6 +13,10 @@
             <button>Zobacz więcej...</button>
         </div>
       </div>
+      <div class="col-lg-5 col-7 d-flex justify-content-center">
+        <div class="image"></div>
+      </div>
+      
     </div>
   </div>
 </div>
