--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,11 +1,5 @@
-.portrait {
-  width: 80%;
-  object-fit: contain;
-}
-
-.line {
-  border-top: white 0.5px solid;
-  width: 80%;
+.text-container {
+    text-align: justify;
 }
 
 .image {
