--- a/src/app/portfolio-preview/portfolio-preview.component.html
+++ b/src/app/portfolio-preview/portfolio-preview.component.html
@@ -6,7 +6,7 @@
         Stworzymy dla Ciebie wnętrza, które odzwierciedlą Twój styl, łącząc
         estetykę z funkcjonalnością w spójną i zachwycającą całość
       </div>
-      <div class="row d-flex justify-content-center">
+      <div class="row py-4 d-flex justify-content-center img-container">
         <div class="col-12 col-md-3 img-1"></div>
         <div class="col-12 col-md-3 img-1"></div>
         <div class="col-12 col-md-3 img-1"></div>
