--- a/src/app/portfolio-preview/portfolio-preview.component.scss
+++ b/src/app/portfolio-preview/portfolio-preview.component.scss
@@ -1,7 +1,10 @@
+.img-container {
+    gap: 40px;
+}
+
 .img-1 {
   width: 300px;
   height: 300px;
-  margin: 20px;
   background-color: pink;
 }
 
