--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,4 +1,6 @@
 <app-home></app-home>
 <app-portfolio-preview></app-portfolio-preview>
-<app-offer></app-offer>
+<app-offer-preview></app-offer-preview>
 <app-about-me></app-about-me>
+<app-contact-preview></app-contact-preview>
+<app-opinions></app-opinions>
