--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -1,1 +1,49 @@
-<p>offer works!</p>
+<div class="container-fluid">
+    <div class="container">
+        <div class="row d-flex justify-content-center">
+            <div class="offer-image">
+                <div class="text-center title">Oferta</div>
+            </div>
+            <div class="row p-5 d-flex offer-container">
+                <div class="col-12 col-md-6 px-5">
+                    <div class="text-center py-4 subtitle">Projekt koncepcyjny</div>
+                    <div class="caption">
+                        Jest to idealne rozwiązanie do projektowania pojedynczych pomieszczeń, które nie potrzebują szczegółowych rysunków technicznych, lub gdy Twoja ekipa remontowa potrafi przeprowadzić prace na podstawie prostych wytycznych.
+                    </div>
+                    <ul class="px-5">
+                        <li>◦ &nbsp;&nbsp;&nbsp;&nbsp;analiza potrzeb Klienta,</li>
+                        <li>◦ &nbsp;&nbsp;&nbsp;&nbsp;inwentaryzacja (Kraków oraz Mielec)/ praca na gotowym rzucie 2D</li>
+                        <li>◦ &nbsp;&nbsp;&nbsp;&nbsp;2-3 propozycje układów funkcjonalnych,</li>
+                        <li>◦ &nbsp;&nbsp;&nbsp;&nbsp;wizualizacje (z możliwością 2-krotnego wprowadzenia poprawek),</li>
+                        <li>◦ &nbsp;&nbsp;&nbsp;&nbsp;lista wyposażenia</li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-6 px-5">
+                    <div class="text-center py-4 subtitle">Projekt kompleksowy</div>
+                    <div class="caption">
+                        To rozwiązanie najlepiej sprawdza się, gdy potrzebujesz przekazać szczegółową dokumentację ekipie wykończeniowej oraz chcesz mieć dokładną listę wyposażenia wnętrza wraz z wiedzą, gdzie je kupić.
+                    </div>
+                    <ul class="px-5">
+                        <li>◦ &nbsp;&nbsp;&nbsp;&nbsp;analiza potrzeb Klienta,</li>
+                        <li>◦ &nbsp;&nbsp;&nbsp;&nbsp;inwentaryzacja (Kraków oraz Mielec)/ praca na gotowym rzucie 2D</li>
+                        <li>◦ &nbsp;&nbsp;&nbsp;&nbsp;2-3 propozycje układów funkcjonalnych,</li>
+                        <li>◦ &nbsp;&nbsp;&nbsp;&nbsp;wizualizacje (z możliwością 2-krotnego wprowadzenia poprawek),</li>
+                        <li>◦ &nbsp;&nbsp;&nbsp;&nbsp;szczegółowe rysunki wykonawcze:</li>
+                            <ul>
+                                <li>• &nbsp;&nbsp;&nbsp;&nbsp;rzut aranżacji wnętrza,</li>
+                                <li>• &nbsp;&nbsp;&nbsp;&nbsp;rzut elektryki,</li>
+                                <li>• &nbsp;&nbsp;&nbsp;&nbsp;rzut instalacji wod.-kan.,</li>
+                                <li>• &nbsp;&nbsp;&nbsp;&nbsp;rzut okładzin ściennych,</li>
+                                <li>• &nbsp;&nbsp;&nbsp;&nbsp;rzut podłóg,</li>
+                                <li>• &nbsp;&nbsp;&nbsp;&nbsp;rzut sufitów,</li>
+                                <li>• &nbsp;&nbsp;&nbsp;&nbsp;rzut zabudów g-k,</li>
+                                <li>• &nbsp;&nbsp;&nbsp;&nbsp;widoki wszystkich ścian,</li>
+                                <li>• &nbsp;&nbsp;&nbsp;&nbsp;rysunki elementów projektowanych na wymiar,</li>
+                            </ul>
+                        <li>◦ &nbsp;&nbsp;&nbsp;&nbsp;lista wyposażenia</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
