--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,18 +1,29 @@
+@use "../../styles/global" as global;
+
+.container-fluid {
+  background-color: global.$background-light;
+  color: global.$background-primary;
+}
+
+.container {
+  border-top: 1px solid global.$background-primary;
+}
+
 .text-container {
-    text-align: justify;
+  text-align: justify;
 }
 
 .image {
-  width: 200px;
-  height: 300px;
-  background-color: pink;
+  background-image: url("../../../public/offer-preview/1.png");
+  background-size: cover;
+  background-position: center;
 }
 
 button {
   background-color: transparent;
   color: #908277;
   padding: 10px 20px;
-  border: 1px solid #908277;
+  border: 1px solid global.$background-primary;
   border-radius: 25px;
   font-size: 16px;
   cursor: pointer;
@@ -20,6 +31,6 @@ button {
 }
 
 button:hover {
-  background-color: #908277;
-  color: white;
+  background-color: global.$background-primary;
+  color: global.$background-light;
 }
