--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
         alt="logo"
       />
       </div>
-      <div class="d-flex d-lg-none p-3 pointer" (click)="toggleCollapse()">
+      <div class="d-flex d-lg-none me-2 pointer icon-menu" (click)="toggleCollapse()">
         <img src="{{ toggleIcon }}" class="icon" alt="menu" />
     </div>
       <div class="d-none d-lg-flex align-items-center mx-4">
@@ -22,7 +22,7 @@
           <a class="mx-4 mt-5 pointer" (click)="onClickHome()">Home</a>
           <a class="mx-4 mt-5 pointer" (click)="onClickAboutMe()">O mnie</a>
           <a class="mx-4 mt-5 pointer" (click)="onClickPortfolio()">Portfolio</a>
-          <a class="mx-4 pointer" [routerLink]="offerPath">Oferta</a>
+          <a class="mx-4 mt-5 pointer" [routerLink]="offerPath">Oferta</a>
           <a class="mx-4 my-5 pointer" (click)="onClickContact()">Kontakt</a>
         </div>
       </div>
