--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
-    <div class="row g-0 pt-5 px-5 px-lg-0 d-flex justify-content-center">
-      <div class="col-lg-5 col-md-12 pb-5 pt-md-0 pe-0 pe-sm-5 text-container">
+    <div class="row g-0 py-5 d-flex justify-content-center">
+      <div class="col-lg-6 col-md-12 p-5">
         <div class="title pb-3">O mnie</div>
         <div class="subtitle pb-3">mgr inż. arch. Simona Lorenc</div>
-        <div class="pb-3 caption">
+        <div class="pb-3 caption text-container">
             Jestem absolwentką Wydziału Architektury Politechniki Krakowskiej, a doświadczenie zdobywałam, pracując dla polskich i zagranicznych pracowni architektonicznych. Moim celem jest tworzenie przestrzeni, które w pełni wykorzystują dostępne miejsce, zapewniając jednocześnie funkcjonalność. Wierzę, że kluczem do udanego projektu są przemyślane rozwiązania, które odpowiadają na potrzeby użytkowników, a równowaga między praktycznością a estetyką to fundament każdego projektu.<br><br>
 
             Projektowanie wnętrz jest moją pasją, a moja praca cechuje się sumiennością, kreatywnością i ambicją. Tworzę przestrzenie, które są nie tylko piękne i praktyczne, ale także spójne i idealnie dopasowane do oczekiwań Klienta. Każdy element wnętrza, który projektuję, stanowi integralną część harmonijnej całości.
@@ -13,10 +13,7 @@
             <button>Zobacz więcej...</button>
         </div>
       </div>
-      <div class="col-lg-5 col-7 d-flex justify-content-center">
-        <div class="image"></div>
-      </div>
-      
+      <div class="col-lg-6 col-7 image"></div>
     </div>
   </div>
 </div>
