--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,14 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
-    <div
-      class="row g-0 py-5 px-5 px-md-0 d-flex justify-content-between"
-    >
-      <div class="logo"></div>
+    <div class="row g-0 py-5 px-5 px-md-0 d-flex justify-content-between">
+      <img src="header/logo.svg" class="p-3 logo pointer" alt="logo" />
       <div class="col-4 col-md-4 d-flex flex-column">
         <div class="subtitle pb-3">Kontakt</div>
         <div>Simona Lorenc Concept</div>
         <div class="d-flex flex-column">
-          <a class="pt-2" [href]="mailToLink">e-mail: slorenc.soncept&#64;gmail.com</a>
+          <a class="pt-2" [href]="mailToLink"
+            >e-mail: slorenc.soncept&#64;gmail.com</a
+          >
           <a class="pt-2" [href]="'tel:+48518272333'">tel.: +48 793 733 350</a>
           <a class="pt-2">instagram</a>
         </div>
