--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,10 +1,13 @@
+@use "../../styles/global" as global;
+
 .navbar {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 4rem;
+    // height: 4rem;
     z-index: 1000;
-    color: white;
+    // color: global.$background-primary;
+    background-color: global.$background-light;
   }
   
   .logo-container {
@@ -12,24 +15,28 @@
   }
   
   .logo {
-    height: 1.75rem;
+    height: 3.5rem;
   }
   
   .icon {
     transform: scale(1.1);
     z-index: 1;
   }
+
+  .icon-menu {
+    padding: 30px;
+  }
   
   .nav-list {
     position: absolute;
-    background-color: #908277;
+    background-color: global.$background-primary;
     width: 100%;
   }
   
   a {
     transition: color ease-in-out 0.3s;
     text-decoration: none;
-    color: white;
+    color: global.$background-light;
   }
   
   a:hover {
