--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid g-0 d-flex justify-content-center video-wrapper">
+<div class="container-fluid g-0 d-flex justify-content-center main-image">
   <div class="container d-flex flex-column justify-content-end">
     <div class="row justify-content-center mx-5 mx-lg-0">
       <div
