--- a/src/app/offer-preview/offer-preview.component.scss
+++ b/src/app/offer-preview/offer-preview.component.scss
@@ -1,20 +1,25 @@
+@use "../../styles/global" as global;
+
 .container-fluid {
-  // background-color: #908277;
-  background-color: pink;
-  color: white;
+  color: global.$background-primary;
+  background-color: global.$background-light;
+}
+
+.container {
+  border-top: 1px solid global.$background-primary;
 }
 
 .image {
-    background-color: wheat;
-    width: 300px;
-    height: 300px;
+  background-image: url("../../../public/offer-preview/1.png");
+  background-size: cover;
+  background-position: center;
 }
 
 button {
   background-color: transparent;
-  color: white;
+  color: #908277;
   padding: 10px 20px;
-  border: 1px solid white;
+  border: 1px solid global.$background-primary;
   border-radius: 25px;
   font-size: 16px;
   cursor: pointer;
@@ -22,6 +27,6 @@ button {
 }
 
 button:hover {
-  background-color: white;
-  color: #908277;
+  background-color: global.$background-primary;
+  color: global.$background-light;
 }
