--- a/src/app/portfolio-preview/portfolio-preview.component.html
+++ b/src/app/portfolio-preview/portfolio-preview.component.html
@@ -1,15 +1,21 @@
-<div class="container-fluid">
+<div class="container-fluid g-0">
   <div class="container">
-    <div class="p-5 d-flex flex-column align-items-center">
+    <div class="py-5 d-flex flex-column align-items-center">
       <div class="title">PROJEKTUJEMY MARZENIA, NIE TYLKO WNĘTRZA</div>
       <div class="pt-3 text-center caption">
         Stworzymy dla Ciebie wnętrza, które odzwierciedlą Twój styl, łącząc
         estetykę z funkcjonalnością w spójną i zachwycającą całość
       </div>
-      <div class="row py-4 d-flex justify-content-center img-container">
-        <div class="col-12 col-md-3 img-1"></div>
-        <div class="col-12 col-md-3 img-1"></div>
-        <div class="col-12 col-md-3 img-1"></div>
+      <div class="row py-4 d-flex justify-content-between img-container">
+        <div class="col-12 col-lg-4 py-4 py-lg-0">
+            <img src="portfolio-preview/1.png" class="img-1" alt="">
+        </div>
+        <div class="col-12 col-lg-4 py-4 py-lg-0">
+            <img src="portfolio-preview/2.jpg" class="img-1" alt="">
+        </div>
+        <div class="col-12 col-lg-4 py-4 py-lg-0">
+            <img src="portfolio-preview/3.jpg" class="img-1" alt="">
+        </div>
       </div>
       <button>Zobacz więcej...</button>
     </div>
