--- a/src/app/portfolio-preview/portfolio-preview.component.scss
+++ b/src/app/portfolio-preview/portfolio-preview.component.scss
@@ -1,18 +1,27 @@
-.img-container {
-    gap: 40px;
+@use "../../styles/global" as global;
+
+.container-fluid {
+    background-color: global.$background-light;
+    color: global.$background-primary;
 }
 
+// .img-container {
+//     gap: 20px;
+// }
+
 .img-1 {
-  width: 300px;
+  width: 100%;
   height: 300px;
-  background-color: pink;
+  object-fit: cover;
+  display: block;
+  max-width: 100%;
 }
 
 button {
   background-color: transparent;
-  color: #908277;
+  color: global.$background-primary;
   padding: 10px 20px;
-  border: 1px solid #908277;
+  border: 1px solid global.$background-primary;
   border-radius: 25px;
   font-size: 16px;
   cursor: pointer;
@@ -20,6 +29,6 @@ button {
 }
 
 button:hover {
-  background-color: #908277;
-  color: white;
+  background-color: global.$background-primary;
+  color: global.$background-light;
 }
