--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
     <div class="row g-0 py-5 d-flex justify-content-center">
-      <div class="col-lg-6 col-md-12 p-5">
+      <div class="col-md-6 col-12 order-md-1 order-2 p-5">
         <div class="title pb-3">O mnie</div>
         <div class="subtitle pb-3">mgr inż. arch. Simona Lorenc</div>
         <div class="pb-3 caption text-container">
@@ -13,7 +13,7 @@
             <button>Zobacz więcej...</button>
         </div>
       </div>
-      <div class="col-lg-6 col-7 image"></div>
+      <div class="col-md-6 col-12 order-md-2 order-1 image"></div>
     </div>
   </div>
 </div>
