--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,8 +5,7 @@
         class="col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center logo-container-border"
       >
         <div class="m-5"></div>
-        <!-- <img src="home/logo_white.svg" class="logo" alt="logo" /> -->
-        <div>LOGO</div>
+        <img src="header/logo.svg" class="logo" alt="logo" />
         <div class="m-5"></div>
         <div class="p-5">
           Nieszablonowe wnętrza zaprojektowane według Twoich potrzeb!
