--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -17,6 +17,7 @@
   background-image: url("../../../public/offer-preview/1.png");
   background-size: cover;
   background-position: center;
+  min-height: 300px;
 }
 
 button {
