--- a/src/app/offer-preview/offer-preview.component.scss
+++ b/src/app/offer-preview/offer-preview.component.scss
@@ -13,6 +13,7 @@
   background-image: url("../../../public/offer-preview/1.png");
   background-size: cover;
   background-position: center;
+  min-height: 300px;
 }
 
 button {
