--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,9 @@
 @import "bootstrap/scss/bootstrap-grid";
 @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
-  font-family: "Libre Franklin", sans-serif;
+  font-family: "Roboto", sans-serif;
   // outline: 1px solid red; 
 }
 
