--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar" [@transparentBackground]="isTransparent ? 'true' : 'false'">
     <div class="container-fluid g-0 d-flex justify-content-between caption">
-      <div class="logo-container">
+      <div class="d-flex align-items-center logo-container">
         <img
-        src="header/logo.svg"
+        src="header/short_logo.svg"
         class="p-3 logo pointer"
         alt="logo"
       />
