--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,12 +2,12 @@
   <div class="container d-flex flex-column justify-content-end">
     <div class="row justify-content-center mx-5 mx-lg-0">
       <div
-        class="col-12 col-lg-6 d-flex flex-column justify-content-center align-items-center logo-container-border"
+        class="col-12 d-flex flex-column justify-content-center align-items-center"
       >
         <div class="m-5"></div>
-        <img src="header/logo.svg" class="logo" alt="logo" />
-        <div class="m-5"></div>
-        <div class="p-5">
+        <img src="home/logo2.svg" class="logo" alt="logo" />
+        <div class="m-3"></div>
+        <div class="p-5 mb-5 title">
           Nieszablonowe wnętrza zaprojektowane według Twoich potrzeb!
         </div>
       </div>
