--- a/src/app/portfolio-preview/portfolio-preview.component.html
+++ b/src/app/portfolio-preview/portfolio-preview.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid g-0">
-  <div class="container">
-    <div class="py-5 d-flex flex-column align-items-center">
+  <div class="container g-0">
+    <div class="p-5 ps-md-0 pe-md-0 d-flex flex-column align-items-center">
       <div class="title">PROJEKTUJEMY MARZENIA, NIE TYLKO WNĘTRZA</div>
       <div class="pt-3 text-center caption">
         Stworzymy dla Ciebie wnętrza, które odzwierciedlą Twój styl, łącząc
