--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
       <div class="d-none d-lg-flex align-items-center mx-4">
         <a class="mx-4 pointer" (click)="onClickHome()">Home</a>
         <a class="mx-4 pointer" (click)="onClickAboutMe()">O mnie</a>
-        <a class="mx-4 pointer" (click)="onClickPortfolio()">Portfolio</a>
+        <a class="mx-4 pointer" [routerLink]="portfolioPath">Portfolio</a>
         <a class="mx-4 pointer" [routerLink]="offerPath">Oferta</a>
         <a class="mx-4 pointer" (click)="onClickContact()">Kontakt</a>
       </div>
@@ -21,7 +21,7 @@
         <div class="d-flex flex-column">
           <a class="mx-4 mt-5 pointer" (click)="onClickHome()">Home</a>
           <a class="mx-4 mt-5 pointer" (click)="onClickAboutMe()">O mnie</a>
-          <a class="mx-4 mt-5 pointer" (click)="onClickPortfolio()">Portfolio</a>
+          <a class="mx-4 mt-5 pointer" [routerLink]="portfolioPath">Portfolio</a>
           <a class="mx-4 mt-5 pointer" [routerLink]="offerPath">Oferta</a>
           <a class="mx-4 my-5 pointer" (click)="onClickContact()">Kontakt</a>
         </div>
