--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid g-0">
-  <div class="row d-flex justify-content-center">
+  <div class="row d-flex justify-content-center g-0">
     <div class="offer-image">
+      <div class="text-center pt-5 title">Oferta</div>
     </div>
-    <div class="text-center pt-5 title">Oferta</div>
     <div class="row p-5 d-flex offer-container">
       <div class="col-12 col-md-6 px-5 border-right">
         <div class="text-center py-4 subtitle">Projekt koncepcyjny</div>
