--- a/src/app/offer/offer.component.scss
+++ b/src/app/offer/offer.component.scss
@@ -1,8 +1,8 @@
 @use "../../styles/global" as global;
 
 .container-fluid {
-    background-color: global.$background-primary;
-    color: global.$background-light;
+    background-color: global.$background-light;
+    color: global.$background-primary;
 }
 
 .offer-image {
@@ -12,6 +12,7 @@
     min-height: 40vh;
     display: flex;
     justify-content: center;
+    position: relative;
 }
 
 li {
@@ -20,8 +21,14 @@ li {
 }
 
 .title {
+    color: white;
     text-transform: uppercase;
-    font-weight: 500;
+    font-size: 3rem;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
 }
 
 .offer-image-footer {
