--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,1 +1,40 @@
-<p>portfolio works!</p>
+<div class="container-fluid g-0">
+  <div class="row d-flex justify-content-center g-0">
+    <div class="offer-image">
+      <div class="text-center pt-5 title">Projekty</div>
+    </div>
+    <div class="row py-5 px-5 mx-3 mt-3 d-flex justify-content-between img-container">
+        <div class="col-12 col-md-6 col-xl-4 py-4">
+            <img src="portfolio-preview/1.png" class="img-1" alt="">
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 py-4">
+            <img src="portfolio-preview/2.jpg" class="img-1" alt="">
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 py-4">
+            <img src="portfolio-preview/3.jpg" class="img-1" alt="">
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 py-4">
+            <img src="portfolio-preview/1.png" class="img-1" alt="">
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 py-4">
+            <img src="portfolio-preview/2.jpg" class="img-1" alt="">
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 py-4">
+            <img src="portfolio-preview/3.jpg" class="img-1" alt="">
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 py-4">
+            <img src="portfolio-preview/1.png" class="img-1" alt="">
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 py-4">
+            <img src="portfolio-preview/2.jpg" class="img-1" alt="">
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 py-4">
+            <img src="portfolio-preview/3.jpg" class="img-1" alt="">
+        </div>
+      </div>
+    <div class="row p-5 d-flex offer-container">
+      <div class="col-12 col-md-6 px-5 border-right"></div>
+      <div class="offer-image-footer"></div>
+    </div>
+  </div>
+</div>
