--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
     </div>
       <div class="d-none d-lg-flex align-items-center mx-4">
         <a class="mx-4 pointer" (click)="onClickHome()">Home</a>
-        <a class="mx-4 pointer" (click)="onClickAboutMe()">O mnie</a>
+        <a class="mx-4 pointer" [routerLink]="aboutMePath">O mnie</a>
         <a class="mx-4 pointer" [routerLink]="portfolioPath">Portfolio</a>
         <a class="mx-4 pointer" [routerLink]="offerPath">Oferta</a>
         <a class="mx-4 pointer" (click)="onClickContact()">Kontakt</a>
@@ -20,7 +20,7 @@
       <div *ngIf="!isCollapsed" class="me-4 pt-5 nav-list" @slideToggle>
         <div class="d-flex flex-column">
           <a class="mx-4 mt-5 pointer" (click)="onClickHome()">Home</a>
-          <a class="mx-4 mt-5 pointer" (click)="onClickAboutMe()">O mnie</a>
+          <a class="mx-4 mt-5 pointer" [routerLink]="aboutMePath">O mnie</a>
           <a class="mx-4 mt-5 pointer" [routerLink]="portfolioPath">Portfolio</a>
           <a class="mx-4 mt-5 pointer" [routerLink]="offerPath">Oferta</a>
           <a class="mx-4 my-5 pointer" (click)="onClickContact()">Kontakt</a>
