--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -4,33 +4,9 @@
       <div class="text-center pt-5 title">Projekty</div>
     </div>
     <div class="row py-5 px-5 mx-3 mt-3 d-flex justify-content-between img-container">
-        <div class="col-12 col-md-6 col-xl-4 py-4">
-            <img src="portfolio-preview/1.png" class="img-1" alt="">
-        </div>
-        <div class="col-12 col-md-6 col-xl-4 py-4">
-            <img src="portfolio-preview/2.jpg" class="img-1" alt="">
-        </div>
-        <div class="col-12 col-md-6 col-xl-4 py-4">
-            <img src="portfolio-preview/3.jpg" class="img-1" alt="">
-        </div>
-        <div class="col-12 col-md-6 col-xl-4 py-4">
-            <img src="portfolio-preview/1.png" class="img-1" alt="">
-        </div>
-        <div class="col-12 col-md-6 col-xl-4 py-4">
-            <img src="portfolio-preview/2.jpg" class="img-1" alt="">
-        </div>
-        <div class="col-12 col-md-6 col-xl-4 py-4">
-            <img src="portfolio-preview/3.jpg" class="img-1" alt="">
-        </div>
-        <div class="col-12 col-md-6 col-xl-4 py-4">
-            <img src="portfolio-preview/1.png" class="img-1" alt="">
-        </div>
-        <div class="col-12 col-md-6 col-xl-4 py-4">
-            <img src="portfolio-preview/2.jpg" class="img-1" alt="">
-        </div>
-        <div class="col-12 col-md-6 col-xl-4 py-4">
-            <img src="portfolio-preview/3.jpg" class="img-1" alt="">
-        </div>
+      <div *ngFor="let project of projects" class="col-12 col-md-6 col-xl-4 py-4">
+        <img [src]="project.imageUrl" class="img-1" [routerLink]="['/projekty', project.title]" [alt]="project.title">
+      </div>
       </div>
     <div class="row p-5 d-flex offer-container">
       <div class="col-12 col-md-6 px-5 border-right"></div>
