--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,6 +4,7 @@
         <img
         src="header/short_logo.svg"
         class="p-3 logo pointer"
+        [routerLink]="mainPath"
         alt="logo"
       />
       </div>
