Add contact scroll

--- a/src/app/contact-preview/contact-preview.component.html
+++ b/src/app/contact-preview/contact-preview.component.html
@@ -8,7 +8,7 @@
             Zapraszam do kontaktu telefonicznego lub mailowego. Jeśli jesteś z Krakowa, Mielca lub okolic, chętnie się spotkam i poznam Twoje oczekiwania.
         </div>
         <div class="d-flex flex-column align-items-center">
-          <button>Przejdź do kontaktu...</button>
+          <button (click)="onClickContact()">Przejdź do kontaktu...</button>
         </div>
       </div>
     </div>
