fix privacy policy

--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -8,17 +8,16 @@
         1. Niniejsza Polityka ochrony prywatności określa sposób zbierania,
         przetwarzania i przechowywania danych osobowych za pośrednictwem serwisu
         internetowego w domenie www.legalnyhr.pl (dalej: Serwis). <br />2.
-        Administratorem danych osobowych użytkowników jest Angelika Czarnecka,
-        prowadząca działalność gospodarczą pod firmą Kancelaria Radcy Prawnego
-        Angelika Czarnecka, NIP: 6772513530, REGON: 529226648 (dalej:
+        Administratorem danych osobowych użytkowników jest Simona Lorenc,
+        prowadząca działalność gospodarczą pod firmą Simona Lorenc Concept, NIP: 6772486000, REGON: 523566716 (dalej:
         Administrator). <br />Dane kontaktowe:
         <ul>
-          <li>Administrator: Angelika Czarnecka</li>
+          <li>Administrator: Simona Lorenc</li>
           <li>
-            Adres do korespondencji: ul.Bartosza Głowackiego 12/62, 30-085 Kraków
+            Adres do korespondencji: ul.Bartosza Głowackiego 12/64, 30-085 Kraków
           </li>
-          <li>Adres mailowy: kancelaria&#64;legalnyhr.pl</li>
-          <li>Numer kontaktowy: +48 518 272 333</li>
+          <li>Adres mailowy: slorenc.concept&#64;gmail.com</li>
+          <li>Numer kontaktowy: +48 793 733 350</li>
         </ul>
         3. Dane osobowe przetwarzane są zgodnie z Rozporządzeniem Parlamentu
         Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 r. w sprawie
