--- a/src/app/opinions/opinions.component.html
+++ b/src/app/opinions/opinions.component.html
@@ -1,10 +1,35 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
-    <div class="row g-0 pt-5 px-5 px-lg-0 d-flex justify-content-center">
-      <div class="col-lg-5 col-md-12 pb-5 pt-md-0 pe-0 pe-sm-5 text-center">
-        <div class="title pb-3">Opinie</div>
-
-
+    <div class="p-5 ps-md-0 pe-md-0 d-flex flex-column align-items-center">
+      <div class="title">Opinie</div>
+      <div class="row py-4 d-flex justify-content-between">
+        <div class="col-12 col-md-6 col-xl-4 py-4 card">
+          <div>
+            "Nasz dom wreszcie wygląda tak, jak zawsze sobie wyobrażaliśmy.
+            Projektantka doskonale połączyła nasze odmienne style i stworzyła
+            wnętrza, w których oboje czujemy się świetnie. Proces projektowania
+            był bezstresowy, a efekt - wyjątkowy. Polecamy z całego serca!"
+          </div>
+          <div>Agnieszka i Tomasz R.</div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 py-4 card">
+          <div>
+            "Nasz dom wreszcie wygląda tak, jak zawsze sobie wyobrażaliśmy.
+            Projektantka doskonale połączyła nasze odmienne style i stworzyła
+            wnętrza, w których oboje czujemy się świetnie. Proces projektowania
+            był bezstresowy, a efekt - wyjątkowy. Polecamy z całego serca!"
+          </div>
+          <div>Agnieszka i Tomasz R.</div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 py-4 card">
+          <div>
+            "Nasz dom wreszcie wygląda tak, jak zawsze sobie wyobrażaliśmy.
+            Projektantka doskonale połączyła nasze odmienne style i stworzyła
+            wnętrza, w których oboje czujemy się świetnie. Proces projektowania
+            był bezstresowy, a efekt - wyjątkowy. Polecamy z całego serca!"
+          </div>
+          <div>Agnieszka i Tomasz R.</div>
+        </div>
       </div>
     </div>
   </div>
