opinions media query

--- a/src/app/opinions/opinions.component.scss
+++ b/src/app/opinions/opinions.component.scss
@@ -11,4 +11,18 @@
 
 .card {
   background-color: white;
+  height: 215px;
+  padding: 1.5rem;
+}
+
+@media (max-width: 992px) {
+  .card {
+    height: 160px;
+  }
+}
+
+@media (max-width: 768px) {
+  .card {
+    height: 110px;
+  }
 }
