--- a/src/app/opinions/opinions.component.html
+++ b/src/app/opinions/opinions.component.html
@@ -2,33 +2,38 @@
   <div class="container g-0">
     <div class="p-5 ps-md-0 pe-md-0 d-flex flex-column align-items-center">
       <div class="title">Opinie</div>
-      <div class="row py-4 d-flex justify-content-between">
-        <div class="col-12 col-md-6 col-xl-4 py-4 card">
-          <div>
-            "Nasz dom wreszcie wygląda tak, jak zawsze sobie wyobrażaliśmy.
-            Projektantka doskonale połączyła nasze odmienne style i stworzyła
-            wnętrza, w których oboje czujemy się świetnie. Proces projektowania
-            był bezstresowy, a efekt - wyjątkowy. Polecamy z całego serca!"
+      <div class="row py-4 d-flex justify-content-between caption">
+        <div class="col-12 col-md-6 col-xl-4 py-3">
+          <div class="card d-flex flex-column justify-content-between">
+            <div>
+              "Nasz dom wreszcie wygląda tak, jak zawsze sobie wyobrażaliśmy.
+              Projektantka doskonale połączyła nasze odmienne style i stworzyła
+              wnętrza, w których oboje czujemy się świetnie. Proces
+              projektowania był bezstresowy, a efekt - wyjątkowy. Polecamy z
+              całego serca!"
+            </div>
+            <div>Agnieszka i Tomasz R., Mielec</div>
           </div>
-          <div>Agnieszka i Tomasz R.</div>
         </div>
-        <div class="col-12 col-md-6 col-xl-4 py-4 card">
-          <div>
-            "Nasz dom wreszcie wygląda tak, jak zawsze sobie wyobrażaliśmy.
-            Projektantka doskonale połączyła nasze odmienne style i stworzyła
-            wnętrza, w których oboje czujemy się świetnie. Proces projektowania
-            był bezstresowy, a efekt - wyjątkowy. Polecamy z całego serca!"
+        <div class="col-12 col-md-6 col-xl-4 py-3">
+          <div class="card d-flex flex-column justify-content-between">
+            <div>
+              "Współpraca była czystą przyjemnością! Nasze mieszkanie w końcu
+              wygląda tak, jak sobie wymarzyliśmy - piękne, przytulne i
+              funkcjonalne. Serdecznie polecamy!"
+            </div>
+            <div>Katarzyna i Marcin, Kraków</div>
           </div>
-          <div>Agnieszka i Tomasz R.</div>
         </div>
-        <div class="col-12 col-md-6 col-xl-4 py-4 card">
-          <div>
-            "Nasz dom wreszcie wygląda tak, jak zawsze sobie wyobrażaliśmy.
-            Projektantka doskonale połączyła nasze odmienne style i stworzyła
-            wnętrza, w których oboje czujemy się świetnie. Proces projektowania
-            był bezstresowy, a efekt - wyjątkowy. Polecamy z całego serca!"
+        <div class="col-12 col-md-6 col-xl-4 py-3">
+          <div class="card d-flex flex-column justify-content-between">
+            <div>
+              "Każdy szczegół został perfekcyjnie dopracowany. Wnętrze jest nie
+              tylko estetyczne, ale również niezwykle praktyczne. Efekt końcowy
+              przerósł oczekiwania!"
+            </div>
+            <div>Anna P., Mielec</div>
           </div>
-          <div>Agnieszka i Tomasz R.</div>
         </div>
       </div>
     </div>
