--- a/src/app/about-me-preview/about-me-preview.component.html
+++ b/src/app/about-me-preview/about-me-preview.component.html
@@ -8,7 +8,7 @@
             Jestem absolwentką Wydziału Architektury Politechniki Krakowskiej, a doświadczenie zdobywałam, pracując dla polskich i zagranicznych pracowni architektonicznych. Moim celem jest tworzenie przestrzeni, które w pełni wykorzystują dostępne miejsce, zapewniając jednocześnie funkcjonalność. Wierzę, że kluczem do udanego projektu są przemyślane rozwiązania, które odpowiadają na potrzeby użytkowników, a równowaga między praktycznością a estetyką to fundament każdego projektu.<br><br>
         </div>
         <div class="d-flex flex-column align-items-center">
-            <button [routerLink]="aboutMePath">Zobacz więcej...</button>
+            <button [routerLink]="aboutMePath">Zobacz więcej</button>
         </div>
       </div>
       <div class="col-md-6 col-12 order-md-2 order-1 image"></div>
