--- a/src/app/offer-preview/offer-preview.component.html
+++ b/src/app/offer-preview/offer-preview.component.html
@@ -14,7 +14,7 @@
             odpowiada Twoim potrzebom i marzeniom.
         </div>
         <div class="d-flex flex-column align-items-center">
-          <button [routerLink]="[offerPath]">Poznaj ofertę...</button>
+          <button [routerLink]="[offerPath]">Poznaj ofertę</button>
         </div>
       </div>
     </div>
