--- a/src/app/portfolio-preview/portfolio-preview.component.html
+++ b/src/app/portfolio-preview/portfolio-preview.component.html
@@ -17,7 +17,7 @@
             <img src="portfolio-preview/3.jpg" class="img-1" alt="">
         </div>
       </div>
-      <button [routerLink]="portfolioPath">Zobacz więcej...</button>
+      <button [routerLink]="portfolioPath">Zobacz więcej</button>
     </div>
   </div>
 </div>
