--- a/src/app/opinions/opinions.component.html
+++ b/src/app/opinions/opinions.component.html
@@ -5,7 +5,7 @@
       <div class="row py-4 d-flex justify-content-between caption">
         <div class="col-12 col-md-6 col-xl-4 py-3">
           <div class="card d-flex flex-column justify-content-between">
-            <div>
+            <div class="italic">
               "Nasz dom wreszcie wygląda tak, jak zawsze sobie wyobrażaliśmy.
               Projektantka doskonale połączyła nasze odmienne style i stworzyła
               wnętrza, w których oboje czujemy się świetnie. Proces
@@ -17,7 +17,7 @@
         </div>
         <div class="col-12 col-md-6 col-xl-4 py-3">
           <div class="card d-flex flex-column justify-content-between">
-            <div>
+            <div class="italic">
               "Współpraca była czystą przyjemnością! Nasze mieszkanie w końcu
               wygląda tak, jak sobie wymarzyliśmy - piękne, przytulne i
               funkcjonalne. Serdecznie polecamy!"
@@ -27,7 +27,7 @@
         </div>
         <div class="col-12 col-md-6 col-xl-4 py-3">
           <div class="card d-flex flex-column justify-content-between">
-            <div>
+            <div class="italic">
               "Każdy szczegół został perfekcyjnie dopracowany. Wnętrze jest nie
               tylko estetyczne, ale również niezwykle praktyczne. Efekt końcowy
               przerósł oczekiwania!"
