--- a/src/app/offer-preview/offer-preview.component.html
+++ b/src/app/offer-preview/offer-preview.component.html
@@ -2,7 +2,7 @@
   <div class="container g-0">
     <div class="row g-0 py-5">
       <div class="col-12 col-md-6 image"></div>
-      <div class="col-12 col-md-6 p-5">
+      <div class="col-12 col-md-6 p-5 pb-0">
         <div class="title pb-3">Oferta</div>
         <div class="pb-3 caption">
             Każdy z nas ma unikalne potrzeby i własne wizje wymarzonego wnętrza.
