--- a/src/app/about-me-preview/about-me-preview.component.html
+++ b/src/app/about-me-preview/about-me-preview.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
     <div class="row g-0 py-5 d-flex justify-content-center">
-      <div class="col-md-6 col-12 order-md-1 order-2 p-5">
+      <div class="col-md-6 col-12 order-md-1 order-2 p-5 pb-0">
         <div class="title pb-3">O mnie</div>
         <div class="subtitle pb-3">mgr inż. arch. Simona Lorenc</div>
         <div class="pb-3 caption text-container">
