--- a/src/app/contact-preview/contact-preview.component.html
+++ b/src/app/contact-preview/contact-preview.component.html
@@ -2,9 +2,9 @@
   <div class="container g-0">
     <div class="row g-0 py-5 d-flex justify-content-center">
       <div class="col-md-6 col-12 pb-5 image"></div>
-      <div class="col-md-6 col-12 p-5">
+      <div class="col-md-6 col-12 p-5 pb-0">
         <div class="title pb-3">Kontakt</div>
-        <div class="pb-3 caption">
+        <div class="pb-5 caption">
             Zapraszam do kontaktu telefonicznego lub mailowego. Jeśli jesteś z Krakowa, Mielca lub okolic, chętnie się spotkam i poznam Twoje oczekiwania.
         </div>
         <div class="d-flex flex-column align-items-center">
