--- a/src/app/portfolio-detail/portfolio-detail.component.html
+++ b/src/app/portfolio-detail/portfolio-detail.component.html
@@ -12,7 +12,7 @@
       >
         <img
           [src]="image.imageUrl"
-          class="img-1"
+          class="img-portfolio"
           [alt]=""
         />
       </div>
