--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
         <div class="m-5"></div>
         <img src="home/logo2.svg" class="logo" alt="logo" />
         <div class="m-3"></div>
-        <div class="p-5 mb-5 title">
+        <div class="p-5 mb-5 title img-text-shaddow">
           Nieszablonowe wnętrza zaprojektowane według Twoich potrzeb!
         </div>
       </div>
