--- a/src/app/portfolio-preview/portfolio-preview.component.html
+++ b/src/app/portfolio-preview/portfolio-preview.component.html
@@ -8,13 +8,13 @@
       </div>
       <div class="row py-4 d-flex justify-content-between img-container">
         <div class="col-12 col-md-6 col-xl-4 py-3">
-            <img src="portfolio-preview/1.png" class="img-1" alt="">
+            <img src="portfolio-preview/1.png" class="img-portfolio" alt="">
         </div>
         <div class="col-12 col-md-6 col-xl-4 py-3">
-            <img src="portfolio-preview/2.jpg" class="img-1" alt="">
+            <img src="portfolio-preview/2.jpg" class="img-portfolio" alt="">
         </div>
         <div class="col-12 col-md-6 col-xl-4 py-3">
-            <img src="portfolio-preview/3.jpg" class="img-1" alt="">
+            <img src="portfolio-preview/3.jpg" class="img-portfolio" alt="">
         </div>
       </div>
       <button [routerLink]="portfolioPath">Zobacz więcej</button>
