--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,9 @@
 <div class="container-fluid g-0 d-flex justify-content-center main-image">
   <div class="container d-flex flex-column justify-content-end">
-    <div class="row justify-content-center mx-5 mx-lg-0">
-      <div
-        class="col-12 d-flex flex-column justify-content-center align-items-center"
-      >
-        <div class="m-5"></div>
+    <div class="row mb-5 justify-content-center">
+      <div class="col-7">
         <img src="home/logo2.svg" class="logo" alt="logo" />
-        <div class="m-3"></div>
-        <div class="p-5 mb-5 title img-text-shaddow">
+        <div class="mt-4 title img-text-shaddow">
           Nieszablonowe wnętrza zaprojektowane według Twoich potrzeb!
         </div>
       </div>
