--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -7,7 +7,7 @@
 
 .main-image {
   position: relative;
-  background-image: url("../../../public/home/main-photo.png");
+  background-image: url("../../../public/home/main-photo.avif");
   background-size: cover;
   background-position: center;
 }
