--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,16 +1,21 @@
 <div class="container-fluid g-0">
-  <div class="container g-0">
-    <div class="row g-0 py-5 px-5 px-md-0 d-flex justify-content-between">
-      <img src="header/logo.svg" class="p-3 logo pointer" alt="logo" />
-      <div class="col-4 col-md-4 d-flex flex-column">
+  <div class="container g-0 d-flex flex-column justify-content-between">
+    <div class="row mt-5 g-0 p-5 px-md-0 d-flex flex-column flex-md-row justify-content-between align-items-center text-center text-md-start">
+      <img src="header/logo.svg" class="p-3 mb-5 logo" alt="logo" />
+      <div class="col-12 col-md-4 d-flex flex-column">
         <div class="subtitle pb-3">Kontakt</div>
         <div>Simona Lorenc Concept</div>
         <div class="d-flex flex-column">
           <a class="pt-2" [href]="mailToLink"
             >e-mail: slorenc.soncept&#64;gmail.com</a
           >
-          <a class="pt-2" [href]="'tel:+48518272333'">tel.: +48 793 733 350</a>
-          <a class="pt-2">instagram</a>
+          <a class="pt-2" [href]="'tel:+48793733350'">tel.: +48 793 733 350</a>
+          <a
+            class="pt-2"
+            [href]="'https://www.instagram.com/slorenc.concept/'"
+            target="_blank"
+            >instagram</a
+          >
         </div>
       </div>
     </div>
