--- a/src/app/about-me-preview/about-me-preview.component.scss
+++ b/src/app/about-me-preview/about-me-preview.component.scss
@@ -14,7 +14,7 @@
 }
 
 .image {
-  background-image: url("../../../public/offer-preview/1.png");
+  background-image: url("../../../public/about-me/about-me.avif");
   background-size: cover;
   background-position: center;
   min-height: 300px;
