--- a/src/app/contact-preview/contact-preview.component.scss
+++ b/src/app/contact-preview/contact-preview.component.scss
@@ -10,7 +10,7 @@
 }
 
 .image {
-  background-image: url("../../../public/offer-preview/1.png");
+  background-image: url("../../../public/contact/contact-preview.avif");
   background-size: cover;
   background-position: center;
   min-height: 300px;
