--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid g-0 d-flex justify-content-center main-image">
+<div class="container-fluid g-0 d-flex justify-content-center">
+  <img class="main-image" ngSrc="home/main-photo.avif" fill>
   <div class="container d-flex flex-column justify-content-end">
     <div class="row mb-5 justify-content-center">
       <div class="col-7">
