--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid g-0">
+  <img class="image" ngSrc="footer/footer-background.avif" fill priority>
   <div class="container g-0 d-flex flex-column justify-content-between">
     <div class="row mt-5 g-0 p-5 px-md-0 d-flex flex-column flex-md-row justify-content-between align-items-center text-center text-md-start">
       <img src="header/logo.svg" class="p-3 mb-5 logo" alt="logo" />
