Lazy preview load

--- a/src/app/contact-preview/contact-preview.component.html
+++ b/src/app/contact-preview/contact-preview.component.html
@@ -1,7 +1,9 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
     <div class="row g-0 py-5 d-flex justify-content-center">
-      <div class="col-md-6 col-12 pb-5 image"></div>
+      <div class="col-md-6 col-12 pb-5 img-preview-container">
+        <img class="img-preview" ngSrc="contact/contact-preview.avif" priority fill>
+      </div>
       <div class="col-md-6 col-12 p-5 pb-0">
         <div class="title pb-3">Kontakt</div>
         <div class="pb-5 caption">
