--- a/src/app/about-me-preview/about-me-preview.component.html
+++ b/src/app/about-me-preview/about-me-preview.component.html
@@ -11,7 +11,9 @@
             <button [routerLink]="aboutMePath">Zobacz więcej</button>
         </div>
       </div>
-      <div class="col-md-6 col-12 order-md-2 order-1 image"></div>
+      <div class="col-md-6 col-12 order-md-2 order-1 img-preview-container">
+        <img class="img-preview" ngSrc="about-me/about-me.avif" priority fill>
+      </div>
     </div>
   </div>
 </div>
