--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,6 +69,18 @@ body {
   max-width: 100%;
 }
 
+.img-preview-container {
+  position: relative;
+  min-height: 300px;
+}
+
+.img-preview {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
 .img-text-shaddow {
   text-shadow: 1px 1px 3px rgb(91, 91, 91);
 }
