Add lazy portfolio image

--- a/src/app/about-me-preview/about-me-preview.component.html
+++ b/src/app/about-me-preview/about-me-preview.component.html
@@ -12,7 +12,7 @@
         </div>
       </div>
       <div class="col-md-6 col-12 order-md-2 order-1 img-preview-container">
-        <img class="img-preview" ngSrc="about-me/about-me.avif" priority fill>
+        <img class="img-preview" ngSrc="about-me/about-me.avif" fill>
       </div>
     </div>
   </div>
