--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -3,9 +3,9 @@
     <div class="offer-image">
       <div class="text-center pt-5 title img-text-shaddow">Projekty</div>
     </div>
-    <div class="row py-5 px-5 mx-3 mt-3 d-flex justify-content-between img-container">
+    <div class="row py-5 px-5 mx-3 mt-3 d-flex justify-content-between">
       <div *ngFor="let project of projects" class="col-12 col-md-6 col-xl-4 py-4">
-        <img [src]="project.imageUrl" class="img-portfolio pointer" [routerLink]="['/projekty', project.title]" [alt]="project.title">
+        <img [src]="project.imageUrl" class="pointer" [routerLink]="['/projekty', project.title]" [alt]="project.title">
       </div>
       </div>
     <div class="row p-5 d-flex offer-container">
