--- a/src/app/contact-preview/contact-preview.component.html
+++ b/src/app/contact-preview/contact-preview.component.html
@@ -2,7 +2,7 @@
   <div class="container g-0">
     <div class="row g-0 py-5 d-flex justify-content-center">
       <div class="col-md-6 col-12 pb-5 img-preview-container">
-        <img class="img-preview" ngSrc="contact/contact-preview.avif" priority fill>
+        <img class="img-preview" ngSrc="contact/contact-preview.avif" fill>
       </div>
       <div class="col-md-6 col-12 p-5 pb-0">
         <div class="title pb-3">Kontakt</div>
