--- a/src/app/opinions/opinions.component.html
+++ b/src/app/opinions/opinions.component.html
@@ -2,7 +2,7 @@
   <div class="container g-0">
     <div class="p-5 ps-md-0 pe-md-0 d-flex flex-column align-items-center">
       <div class="title">Opinie</div>
-      <div class="row py-4 d-flex justify-content-between caption">
+      <div class="row py-4 d-flex justify-content-center caption">
         <div class="col-12 col-md-6 col-xl-4 py-3">
           <div class="card d-flex flex-column justify-content-between">
             <div class="italic">
