--- a/src/app/portfolio-preview/portfolio-preview.component.html
+++ b/src/app/portfolio-preview/portfolio-preview.component.html
@@ -1,20 +1,28 @@
 <div class="container-fluid g-0">
   <div class="container g-0">
-    <div class="p-5 ps-md-0 pe-md-0 d-flex flex-column align-items-center">
-      <div class="title">PROJEKTUJEMY MARZENIA, NIE TYLKO WNĘTRZA</div>
-      <div class="pt-3 text-center caption">
+    <div class="d-flex flex-column align-items-center p-5 ps-md-0 pe-md-0">
+      <div class="col-12 text-center title">
+        PROJEKTUJEMY MARZENIA, NIE TYLKO WNĘTRZA
+      </div>
+      <div class="col-12 pt-3 text-center caption">
         Stworzymy dla Ciebie wnętrza, które odzwierciedlą Twój styl, łącząc
         estetykę z funkcjonalnością w spójną i zachwycającą całość
       </div>
-      <div class="row py-4 d-flex justify-content-between img-container">
+      <div class="row col-12 py-4 justify-content-center">
         <div class="col-12 col-md-6 col-xl-4 py-3">
-            <img src="portfolio-preview/2.avif" class="img-portfolio" alt="">
+          <div class="img-preview-container">
+            <img class="img-preview" ngSrc="portfolio-preview/2.avif" fill />
+          </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4 py-3">
-            <img src="portfolio-preview/1.avif" class="img-portfolio" alt="">
+          <div class="img-preview-container">
+            <img class="img-preview" ngSrc="portfolio-preview/1.avif" fill />
+          </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4 py-3">
-            <img src="portfolio-preview/3.avif" class="img-portfolio" alt="">
+          <div class="img-preview-container">
+            <img class="img-preview" ngSrc="portfolio-preview/3.avif" fill />
+          </div>
         </div>
       </div>
       <button [routerLink]="portfolioPath">Zobacz więcej</button>
