--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@use "../src/styles/global" as global;
 @import "bootstrap/scss/bootstrap-grid";
 @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@@ -14,6 +15,7 @@ html {
 
 body {
   margin: 0;
+  background-color: global.$background-light;
 }
 
 .title {
@@ -59,14 +61,6 @@ body {
   width: 100%;
   height: 30px;
   background: linear-gradient(360deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 100%);
-}
-
-.img-portfolio {
-  width: 100%;
-  height: 300px;
-  object-fit: cover;
-  display: block;
-  max-width: 100%;
 }
 
 .img-preview-container {
